--- a/match-maker-web-tg.html
+++ b/match-maker-web-tg.html
@@ -12,7 +12,7 @@ Matchmaker: Find Your Soulmate in Five Questions
 <p>
 Welcome to Matchmaker! Type an Answer From 1-5 For Each Quesiton Based On Your Personal Opinions
 1 Represents Strongly Disagree While 5 Represents Strongly Agree. The Final Results Will be Calculated 
-by Adding up Your Score and Representing it Out of 100. Score a 70 or Higher and You Will be Considered
+by Adding up Your Score and Representing it Out of 100. Score a 65 or Higher and You May be Considered
 a Good match; a Perfect Score Could Land You at Soulmate Status!
 </p>
 <body>
