--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@ Matchmaker: Find Your Soulmate in Five Questions
 </h1>
 
 <p>
-Welcome to Matchmaker! Type an Answer From 1-5 For Each Quesiton Based On Your Personal Opinions
-1 Represents Strongly Disagree While 5 Represents Strongly Agree. The Final Results Will be Calculated 
-by Adding up Your Score and Representing it Out of 100. Score a 65 or Higher and You May be Considered
+Welcome to Matchmaker! Select an Answer From the Drop Down Menu for Each Statement Based on How Much You Personally Agree With Each Statement.
+Each Answer Will be Worth a Specific Number of Points to Determine How Compatible You are With Me. The Final Results Will be Calculated by Adding 
+up Your Score and Representing it Out of 100. Score a 65 or Higher and You May be Considered
 a Good match; a Perfect Score Could Land You at Soulmate Status!
 </p>
 <body>
